Update provider pages: notification management, partner settings, logs, and user management
- Remove distribution target from notification creation modal
- Add edit/save buttons to partner settings with PDF attachment support
- Create export modal for logs with CSV format only
- Update partner settings modal for CAD Center with Japanese names
- Change user names to Japanese samples in user management

--- a/system_provider_cms/provider_user_manage.html
+++ b/system_provider_cms/provider_user_manage.html
@@ -45,8 +45,8 @@
             </thead>
             <tbody>
                 <tr>
-                    <td>John Doe</td>
-                    <td>john@example.com</td>
+                    <td>田中 太郎</td>
+                    <td>tanaka@example.com</td>
                     <td><span class="badge bg-success">Active</span></td>
                     <td class="text-end">
                         <button class="btn btn-warning btn-sm" onclick="toggleStatus(1)">
@@ -55,8 +55,8 @@
                     </td>
                 </tr>
                 <tr>
-                    <td>Jane Smith</td>
-                    <td>jane@example.com</td>
+                    <td>佐藤 花子</td>
+                    <td>sato@example.com</td>
                     <td><span class="badge bg-secondary">Inactive</span></td>
                     <td class="text-end">
                         <button class="btn btn-success btn-sm" onclick="toggleStatus(2)">
@@ -65,8 +65,8 @@
                     </td>
                 </tr>
                 <tr>
-                    <td>Tom Brown</td>
-                    <td>tom@example.com</td>
+                    <td>鈴木 一郎</td>
+                    <td>suzuki@example.com</td>
                     <td><span class="badge bg-success">Active</span></td>
                     <td class="text-end">
                         <button class="btn btn-warning btn-sm" onclick="toggleStatus(3)">
@@ -75,8 +75,8 @@
                     </td>
                 </tr>
                 <tr>
-                    <td>Alice Johnson</td>
-                    <td>alice@example.com</td>
+                    <td>高橋 美咲</td>
+                    <td>takahashi@example.com</td>
                     <td><span class="badge bg-success">Active</span></td>
                     <td class="text-end">
                         <button class="btn btn-warning btn-sm" onclick="toggleStatus(4)">
@@ -85,8 +85,8 @@
                     </td>
                 </tr>
                 <tr>
-                    <td>Bob Lee</td>
-                    <td>bob@example.com</td>
+                    <td>山田 健太</td>
+                    <td>yamada@example.com</td>
                     <td><span class="badge bg-secondary">Inactive</span></td>
                     <td class="text-end">
                         <button class="btn btn-success btn-sm" onclick="toggleStatus(5)">
