Update index.html and provider_company_detail.html

--- a/system_provider_cms/provider_company_detail.html
+++ b/system_provider_cms/provider_company_detail.html
@@ -123,35 +123,73 @@
         <table class="table table-striped small">
           <thead>
             <tr>
-              <th>プロジェクト名</th>
-              <th>施設数</th>
-              <th>担当者</th>
-              <th>登録日</th>
-              <th>更新日</th>
+              <th>案件名</th>
+              <th>ステータス</th>
+              <th>担当支店</th>
+              <th>工事区分</th>
+              <th>プラン数</th>
+              <th>案件開始日</th>
+              <th>現地調査予定日</th>
               <th class="text-end">操作</th>
             </tr>
           </thead>
           <tbody>
             <tr>
               <td>プロジェクトA</td>
-              <td>
-                <a href="user_facility_list.html" class="text-primary" style="text-decoration: underline;">5</a>
-              </td>
-              <td>担当者A</td>
+              <td><span class="badge bg-info">プラン中</span></td>
+              <td>東京支店</td>
+              <td>新築</td>
+              <td>3</td>
               <td>2024-01-15</td>
-              <td>2024-03-10</td>
+              <td>2024-01-20</td>
               <td class="text-end">
                 <a href="user_project_detail.html" class="btn btn-primary btn-sm">詳細</a>
               </td>
             </tr>
             <tr>
               <td>プロジェクトB</td>
-              <td>
-                <a href="user_facility_list.html" class="text-primary" style="text-decoration: underline;">3</a>
-              </td>
-              <td>担当者B</td>
+              <td><span class="badge bg-success">契約完了</span></td>
+              <td>大阪支店</td>
+              <td>リフォーム</td>
+              <td>2</td>
               <td>2024-02-05</td>
+              <td>2024-02-10</td>
+              <td class="text-end">
+                <a href="user_project_detail.html" class="btn btn-primary btn-sm">詳細</a>
+              </td>
+            </tr>
+            <tr>
+              <td>プロジェクトC</td>
+              <td><span class="badge bg-warning">現地調査済み</span></td>
+              <td>名古屋支店</td>
+              <td>増築</td>
+              <td>1</td>
+              <td>2024-03-01</td>
+              <td>2024-03-05</td>
+              <td class="text-end">
+                <a href="user_project_detail.html" class="btn btn-primary btn-sm">詳細</a>
+              </td>
+            </tr>
+            <tr>
+              <td>プロジェクトD</td>
+              <td><span class="badge bg-secondary">案件登録済み</span></td>
+              <td>福岡支店</td>
+              <td>改築</td>
+              <td>0</td>
               <td>2024-03-15</td>
+              <td>2024-03-20</td>
+              <td class="text-end">
+                <a href="user_project_detail.html" class="btn btn-primary btn-sm">詳細</a>
+              </td>
+            </tr>
+            <tr>
+              <td>プロジェクトE</td>
+              <td><span class="badge bg-dark">他決完了</span></td>
+              <td>札幌支店</td>
+              <td>新築</td>
+              <td>4</td>
+              <td>2024-02-20</td>
+              <td>2024-02-25</td>
               <td class="text-end">
                 <a href="user_project_detail.html" class="btn btn-primary btn-sm">詳細</a>
               </td>
