自社見積作成ページとABC建設ページの編集機能を実装
- 自社見積作成ページ（user_project_detail_estimate_detail_self.html）を新規作成
- 電話番号・担当者名・emailのテーブルとカードを削除してシンプル化
- 編集ボタンで数量・実行単価・備考を編集可能に
- 行追加機能で新規行を追加可能（全項目入力対応）
- ABC建設ページにも同様の編集・行追加機能を追加
- 自社対応見積もり行の詳細ボタンで自社見積作成ページに遷移
- JavaScript機能で編集モード切り替えと動的行追加を実装

--- a/system_user_cms/user_project_detail_estimate_detail.html
+++ b/system_user_cms/user_project_detail_estimate_detail.html
@@ -111,6 +111,19 @@ project_detail_design_doc.html"><i class="bi bi-folder"></i> 資料</a>
                   </thead>
                   <tbody>
                     <tr>
+                      <td>自社対応見積もり</td>
+                      <td>なし</td>
+                      <td>
+                        <input type="text" class="form-control form-control-sm" value="ダミー" style="width: 120px;">
+                      </td>
+                      <td>
+                        <button class="btn btn-success btn-sm" onclick="selectSupplier('自社対応見積もり', this)">確定</button>
+                      </td>
+                      <td></td>
+                      <td></td>
+                      <td><button class="btn btn-sm btn-outline-primary" onclick="location.href='./user_project_detail_estimate_detail_self.html'">詳細</button></td>
+                    </tr>
+                    <tr>
                       <td>ABC建設</td>
                       <td>2024年3月15日</td>
                       <td>¥2,500,000</td>
