業者見積もり管理ページのUI改善
- 自社対応見積もりの提出金額を「ダミー」から「¥1,850,000」に変更
- フォーム入力フィールドを削除してシンプルなテキスト表示に変更
- 全ての業者（自社対応見積もり、ABC建設、EFG工務店）のボタンテキストを「この見積もりを選択」に統一
- より分かりやすいUI表現に改善

--- a/system_user_cms/user_project_detail_estimate_detail.html
+++ b/system_user_cms/user_project_detail_estimate_detail.html
@@ -113,11 +113,9 @@ project_detail_design_doc.html"><i class="bi bi-folder"></i> 資料</a>
                     <tr>
                       <td>自社対応見積もり</td>
                       <td>なし</td>
+                      <td>¥1,850,000</td>
                       <td>
-                        <input type="text" class="form-control form-control-sm" value="ダミー" style="width: 120px;">
-                      </td>
-                      <td>
-                        <button class="btn btn-success btn-sm" onclick="selectSupplier('自社対応見積もり', this)">確定</button>
+                        <button class="btn btn-success btn-sm" onclick="selectSupplier('自社対応見積もり', this)">この見積もりを選択</button>
                       </td>
                       <td></td>
                       <td></td>
@@ -128,7 +126,7 @@ project_detail_design_doc.html"><i class="bi bi-folder"></i> 資料</a>
                       <td>2024年3月15日</td>
                       <td>¥2,500,000</td>
                       <td>
-                        <button class="btn btn-success btn-sm" onclick="selectSupplier('ABC建設', this)">確定</button>
+                        <button class="btn btn-success btn-sm" onclick="selectSupplier('ABC建設', this)">この見積もりを選択</button>
                       </td>
                       <td><span class="badge bg-warning">依頼中</span></td>
                       <td><span class="badge bg-danger">3</span></td>
@@ -139,7 +137,7 @@ project_detail_design_doc.html"><i class="bi bi-folder"></i> 資料</a>
                       <td>2024年3月20日</td>
                       <td>¥2,300,000</td>
                       <td>
-                        <button class="btn btn-success btn-sm" onclick="selectSupplier('EFG工務店', this)">確定</button>
+                        <button class="btn btn-success btn-sm" onclick="selectSupplier('EFG工務店', this)">この見積もりを選択</button>
                       </td>
                       <td><span class="badge bg-success">提出済み</span></td>
                       <td><span class="badge bg-danger">0</span></td>
