--- a/system_user_cms/user_project_detail_designlist.html
+++ b/system_user_cms/user_project_detail_designlist.html
@@ -78,6 +78,17 @@
         <div class="container-fluid mt-4 px-3">
             <div class="d-flex justify-content-between align-items-center mb-3">
               <h3 class="mb-0">プラン一覧</h3>
+              <div>
+                <button class="btn btn-outline-primary me-2" onclick="location.href='user_project_detail_erd.html'">
+                  <i class="bi bi-diagram-3"></i> 既存図ERD
+                </button>
+                <button class="btn btn-outline-success me-2" onclick="location.href='user_project_detail_plan_erd.html'">
+                  <i class="bi bi-diagram-2"></i> プランERD
+                </button>
+                <button class="btn btn-outline-warning" onclick="location.href='user_project_detail_estimation_erd.html'">
+                  <i class="bi bi-calculator"></i> 積算ERD
+                </button>
+              </div>
             </div>
         
             <!-- 既存図作成モーダル -->
